--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,18 @@
-spring: #띄어쓰기 없음
-  datasource: #띄어쓰기 2칸
-    url: jdbc:h2:tcp://localhost/~/jpashop #4칸
-  username: sa
-  password:
-  driver-class-name: org.h2.Driver
-  jpa: #띄어쓰기 2칸
-    hibernate: #띄어쓰기 4칸
-      ddl-auto: create #띄어쓰기 6칸
-    properties: #띄어쓰기 4칸
-      hibernate: #띄어쓰기 6칸
-        # show_sql: true #띄어쓰기 8칸
-        format_sql: true #띄어쓰기 8칸
-logging.level: #띄어쓰기 없음
-  org.hibernate.SQL: debug #띄어쓰기 2칸
-# org.hibernate.type: trace #띄어쓰기 2칸
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/jpashop
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+
+logging.level:
+  org.hibernate.SQL: debug
+  # org.hibernate.type: trace
